# git-logger

./: .gitignore  README.md  error.txt  pyproject.toml  test_workings.py
tests/: test_cli.py  test_git_logger.py  test_git_logger_template.py
