[project]
name = "git-logger-template"
version = "0.1"
description = "null"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Lyubomir Georgiev"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/LVG77/git-logger-template"
Changelog = "https://github.com/LVG77/git-logger-template/releases"
Issues = "https://github.com/LVG77/git-logger-template/issues"
CI = "https://github.com/LVG77/git-logger-template/actions"


[project.optional-dependencies]
test = ["pytest"]
